--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,55 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
+  background: #bdc3c7;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to top, #2c3e50, #bdc3c7);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to top, #2c3e50, #bdc3c7); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+
   display: flex;
   justify-content: center;
   align-items: center;
   border: 1px solid red;
+  min-height: 100vh;
+}
+
+.quote-display {
+  background-color: rgb(184, 184, 184);
+  padding: 1em;
+  margin-bottom: 1em;
+  border: 1px solid red;
+}
+
+.quote-text {
+  font-size: 1.5rem;
+  margin-bottom: 1em;
+  border: 1px solid black;
+}
+
+.quote-author {
+  text-align: right;
+}
+
+.quote-control {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.quote-new-button {
+  text-transform: uppercase;
+  cursor: pointer;
+  display: block;
+  min-width: 48px;
+  min-height: 48px;
+  padding: .5em;
+  outline: none;
+}
+
+.quote-tweet-button {
+  color: white;
 }
