--- a/src/index.css
+++ b/src/index.css
@@ -16,20 +16,21 @@ body {
 }
 
 .quote-display {
-  background-color: rgba(29, 29, 29, 0.5);
+  background-color: rgba(14, 14, 14, 0.60);
   color: white;
   font-family: 'Times New Roman', Times, serif;
   font-style: italic;
-  text-align: center;
   padding: 1em;
   max-width: 30em;
 }
 
 .quote-text {
   font-size: 1.5rem;
-  margin-bottom: 1em;
+  margin: 0;
+  border-left: 3px solid rgb(0, 90, 0);
   user-select: none;
-  cursor: pointer;
+  padding: .2em 0 .25em .5em;
+  cursor: pointer; 
 }
 
 .quote-author {
