Adding gulp-postcss and autoprefixer

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,3 +5,16 @@ body {
   font: 100% $font-stack;
   color: $primary-color;
 }
+
+::placeholder {
+  color: gray;
+}
+
+.image {
+  background-image: url(image@1x.png);
+}
+@media (min-resolution: 2dppx) {
+  .image {
+    background-image: url(image@2x.png);
+  }
+}
