--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,13 +1,71 @@
 @import "bootstrap-reboot";
 
-$font-stack: Helvetica, sans-serif;
-$primary-color: #333;
+$primary-color: #006500;
 
 body {
-  font: 100% $font-stack;
-  color: $primary-color;
+  font-family: Arial, Helvetica, sans-serif;
+  background: darkgray url("./bg.jpg") center/cover no-repeat;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-::placeholder {
-  color: gray;
+#quote-box {
+  color: white;
+  background-color: rgba(14, 14, 14, 0.6);
+  padding: 1em;
+  max-width: 30em;
+}
+
+#text {
+  font-family: "Times New Roman", Times, serif;
+  font-style: italic;
+  font-size: 1.5rem;
+  margin: 0;
+  border-left: 3px solid $primary-color;
+  padding: 0.2em 0 0.25em 0.5em;
+}
+
+#author {
+  font-style: italic;
+  text-align: right;
+  margin: 3em 0 0;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+}
+
+a:hover {
+  color: white;
+}
+
+button {
+  display: inline-block;
+  border: none;
+  padding: 0.25rem 0.5rem;
+  margin: 0;
+  text-decoration: none;
+  background: $primary-color;
+  color: #ffffff;
+  font-family: inherit;
+  font-size: 1rem;
+  cursor: pointer;
+  text-align: center;
+}
+
+button:hover,
+button:focus {
+  background: lighten($primary-color, 3);
+}
+
+button:focus {
+  outline: 1px solid #fff;
+  outline-offset: -4px;
+}
+
+button:active {
+  transform: scale(0.99);
 }
